<resources>
    <string name="app_name">E-ingredient revealer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Set enhancement factor</string>
    <string name="take_snapshot">Snapshot</string>
    <string name="convert_to_grayscale">Grayscale</string>
    <string name="binarize">Binarize</string>
    <string name="analyze">Analyze</string>
    <string name="str_dis_gray">Disable grayscale</string>
    <string name="str_en_gray">Enable grayscale</string>
    <string name="str_dis_bin">Disable image enhancement</string>
    <string name="str_en_bin">Enable image enhancement</string>
    <string name="cameraMessageBottom">Click the camera button to take a snapshot of the ingredients list of a product. The list of identified ingredients will appear on the bottom.</string>
    <string name="cameraMessageRight">Click the camera button to take a snapshot of the ingredients list of a product. The list of identified ingredients will appear on the right.</string>
    <string name="title_activity_details_view">DetailsViewActivity</string>
    <string name="title_activity_eingredient_selection">Select an additive to add</string>
    <string name="permission_storage">The application requires a write access to external storage to store its database and photos</string>
    <string name="ok">OK</string>
    <string name="permission_storage_success">Permission granted. Thank you.</string>
    <string name="permission_storage_failure">Permission not granted. The application will not function properly until permission is granted.</string>
    <string name="permission_camera">The application requires access to the camera to take snapshots of lists of ingredients</string>
    <string name="permission_camera_success">Permission granted. Thank you.</string>
    <string name="permission_camera_failure">Permission not granted. You will only be able to add ingredients manually to the list of ingredients.</string>
</resources>
